debugging: raw import from debugging-training/2022.08
This commits brings all debugging training content "as is".

Signed-off-by: Alexis Lothoré <alexis.lothore@bootlin.com>

--- a/package/Config.in
+++ b/package/Config.in
@@ -97,6 +97,7 @@ menu "Debugging, profiling and benchmark"
 	source "package/coremark-pro/Config.in"
 	source "package/dacapo/Config.in"
 	source "package/delve/Config.in"
+	source "package/debugging-training/Config.in"
 	source "package/dhrystone/Config.in"
 	source "package/dieharder/Config.in"
 	source "package/dmalloc/Config.in"
