kernel/defconfig: update dts path
Device trees are now sorted per manufacturer in kernel 6.6

Signed-off-by: Alexis Lothoré <alexis.lothore@bootlin.com>

--- a/configs/stm32mp157a_dk1_debugging_kexec_defconfig
+++ b/configs/stm32mp157a_dk1_debugging_kexec_defconfig
@@ -12,7 +12,7 @@ BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="6.6.21"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/stmicroelectronics/stm32mp157a-dk1-debugging/linux_kexec.config"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="stm32mp157a-dk1"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="st/stm32mp157a-dk1"
 BR2_PACKAGE_OPENSSH=y
 BR2_TARGET_ROOTFS_CPIO_GZIP=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
